TestSuite/Verification/Error/Parallel/Correctness/Between-Multiple-Devices/Concurrency-Defect/Multiple-Accelerator/out/RecursionTest.cxx
/*********************************************************************/
/*        This is a generated C++ source file.                       */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/

#include <vector>
#include <cstdint>
#include <string>
#include <limits>
#include <iostream>
#include "includes/Patternlib.hxx"
#include "includes/PThreadsLib.hxx"
#include "includes/RecursionTest.hxx"
#include "includes/cuda_lib_RecursionTest.hxx"
#include "mpi.h"
#include "includes/cuda_pool_lib.hxx"
#include "math.h"







/*********************************************************************/
/*        Global Variables                                           */
/*        Generated by PatternDSL .                                  */
/*********************************************************************/



/*********************************************************************/
/*        Function Declarations                                      */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/



int main(int argc, char** argv) {

	int32_t result_NfNUygyBRi;
	int32_t initial_1ySp7Mvkyn;
	int NUM_CORES;
	int NUM_GPUS;

	int rank, nprocs;
	MPI_Status Stat;
	MPI_Init(&argc, &argv);
	MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
	if (rank == 0 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	} else 	if (rank == 1 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	}
	std::vector<Thread> pool(NUM_CORES);
	setPool(&pool);
	std::vector<Thread> gpu_pool(NUM_GPUS);
	setGPUPool(&gpu_pool);
	startExecution();
	startGPUExecution();
	if (rank == 0) {
		initial_1ySp7Mvkyn = 0;
		result_NfNUygyBRi = 0;
	}
	result_NfNUygyBRi = counter(initial_1ySp7Mvkyn);
	if (rank == 0) {
		Bit_Mask * mask_ptr_Mb2cCxZGIf = new Bit_Mask(48,true);
		for (size_t i_KECQM8v1Wp = 0; i_KECQM8v1Wp < 24; ++i_KECQM8v1Wp) {
			mask_ptr_Mb2cCxZGIf->setBarrier(i_KECQM8v1Wp);
		}
		boost::shared_ptr<Bit_Mask>boost_mask_ptr_Mb2cCxZGIf (mask_ptr_Mb2cCxZGIf);
		self_barrier(boost_mask_ptr_Mb2cCxZGIf);
	}
	if (rank == 0) {
		if (result_NfNUygyBRi != 4) {
			print("Recursion not correct!");
			MPI_Abort(MPI_COMM_WORLD, 1);
		}
	}
	finishExecution();
	finishGPUExecution();
	MPI_Finalize();
	return 0;


}

